ji qi ren mi jia tou ming zheng qi dian fan bao 5 kuan xin pin fa bu hui shang xiao mi Civi 2 chan

--- a/about-us.htm
+++ b/about-us.htm
@@ -128,16 +128,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-131276.htm" title="解锁网络自由：电脑Clash汉化补丁全攻略与深度体验">解锁网络自由：电脑Clash汉化补丁全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-144254.htm" title="打造专属高速通道：从零搭建自家服务器科学上网全攻略">打造专属高速通道：从零搭建自家服务器科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-145343.htm" title="全面解析v2rayng手机连接失败：从排查到解决的完整指南">全面解析v2rayng手机连接失败：从排查到解决的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-141748.htm" title="征服山野的利器：2022款Commencal Clash全方位深度测评">征服山野的利器：2022款Commencal Clash全方位深度测评</a></li>
-                        <li class="py-2"><a href="/news/article-143177.htm" title="2022年V2Ray节点每日更新完全指南：解锁稳定高速的网络自由">2022年V2Ray节点每日更新完全指南：解锁稳定高速的网络自由</a></li>
-                        <li class="py-2"><a href="/news/article-138958.htm" title="手机vmess节点完全攻略：从原理到实战的科学上网指南">手机vmess节点完全攻略：从原理到实战的科学上网指南</a></li>
-                        <li class="py-2"><a href="/news/article-139331.htm" title="Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器">Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器</a></li>
-                        <li class="py-2"><a href="/news/article-142825.htm" title="深度解析：V2Ray为何在速度上完胜SSR？技术原理与实战配置全指南">深度解析：V2Ray为何在速度上完胜SSR？技术原理与实战配置全指南</a></li>
-                        <li class="py-2"><a href="/news/article-132748.htm" title="科学上网闪退全攻略：从根源排查到完美解决方案">科学上网闪退全攻略：从根源排查到完美解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-138251.htm" title="突破网络限制：V2Ray安卓版从入门到精通的完整配置指南">突破网络限制：V2Ray安卓版从入门到精通的完整配置指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-14-clash-node-github.htm" title="梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-node-github.htm" title="梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-12-clash-stash.htm" title="梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-15-clash-verge-rev-github.htm" title="梯子机场 - 7月15日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月15日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-12-clash-v2ray-ss-ssr.htm" title="梯子机场 - 7月12日18.1M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月12日18.1M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-7-clash-verge-rev-windows.htm" title="梯子机场 - 7月7日20.5M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月7日20.5M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-19-clash-node.htm" title="梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-29-clash-verge-rev-nodes.htm" title="梯子机场 - 7月29日18.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月29日18.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-8-clash-v2ray-ss-ssr.htm" title="梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-6-node-share.htm" title="梯子机场 - 7月6日18.8M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月6日18.8M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -149,10 +149,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                     </ul>
     </div>
