--- a/privacy.htm
+++ b/privacy.htm
@@ -166,16 +166,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-144617.htm" title="玩转京东农场：Quantumult X高效配置与收益最大化指南">玩转京东农场：Quantumult X高效配置与收益最大化指南</a></li>
-                        <li class="py-2"><a href="/news/article-131979.htm" title="深入解析vmess：从原理到实践的全面使用指南">深入解析vmess：从原理到实践的全面使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-134100.htm" title="科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南">科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南</a></li>
-                        <li class="py-2"><a href="/news/article-139331.htm" title="Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器">Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器</a></li>
-                        <li class="py-2"><a href="/news/article-137893.htm" title="Clash电视版全面解析：免费功能与付费服务的深度指南">Clash电视版全面解析：免费功能与付费服务的深度指南</a></li>
-                        <li class="py-2"><a href="/news/article-135568.htm" title="搬瓦工VPS搭建SSR失败？一文解决所有连接难题">搬瓦工VPS搭建SSR失败？一文解决所有连接难题</a></li>
-                        <li class="py-2"><a href="/news/article-134859.htm" title="深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南">深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-132335.htm" title="从零开始掌握Clash：打造稳定免费的全局代理方案">从零开始掌握Clash：打造稳定免费的全局代理方案</a></li>
-                        <li class="py-2"><a href="/news/article-133825.htm" title="梅林路由器SSR科学上网全攻略：从安装到优化的终极指南">梅林路由器SSR科学上网全攻略：从安装到优化的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-137534.htm" title="突破网络边界：86u科学上网插件的全方位使用指南与深度解析">突破网络边界：86u科学上网插件的全方位使用指南与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-clash-node-github.htm" title="梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-6-clash-verge-rev-github.htm" title="梯子机场 - 8月6日18.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月6日18.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-148374.htm" title="群晖路由器：解锁网络自由的智能网关">群晖路由器：解锁网络自由的智能网关</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-14-clash-node-github.htm" title="梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-12-clash-v2ray-ss-ssr.htm" title="梯子机场 - 7月12日18.1M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月12日18.1M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-5-clash-verge-rev-github.htm" title="梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-10-clash-meta-github.htm" title="梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-21-clash-stash-node.htm" title="梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-19-clash-node.htm" title="梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-4-node-share.htm" title="梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -187,10 +187,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                     </ul>
     </div>
